[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reparatio-cli"
version = "0.1.0"
description = "Command-line tool for the Reparatio data conversion API (alpha)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["csv", "parquet", "excel", "data", "conversion", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.scripts]
reparatio = "reparatio_cli.cli:main"

[project.urls]
Homepage = "https://reparatio.app"
Repository = "https://github.com/jfrancis42/reparatio-cli"
"Bug Tracker" = "https://github.com/jfrancis42/reparatio-cli/issues"
"MCP Server" = "https://github.com/jfrancis42/reparatio-mcp"
"Python SDK" = "https://github.com/jfrancis42/reparatio-sdk"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/reparatio_cli"]
